tests/invalid/actual_expected.err_exp
actual_expected.m:106: In clause for predicate `find_compulsory_lvals'/5:
actual_expected.m:106:   in argument 2 of call to predicate
actual_expected.m:106:   `find_compulsory_lvals'/5:
actual_expected.m:106:   type error: variable `LiveMap' has type
actual_expected.m:106:   `(tree234.tree234((actual_expected.label),
actual_expected.m:106:   (set.set((actual_expected.lval)))))',
actual_expected.m:106:   expected type was
actual_expected.m:106:   `(maybe.maybe((tree234.tree234((actual_expected.label),
actual_expected.m:106:   (set.set((actual_expected.lval)))))))'.
For more information, recompile with `-E'.
